# advent_of_code_2025

./: .gitignore  CMakeLists.txt
src/: 01_a_secret_entrance.cpp  01_b_secret_entrance.cpp  02_a_gift_shop.cpp  02_b_gift_shop.cpp
